Modificamos el enviroments para que escuche al JSON de datos e implementamos el método HTTP GET para traerlos.

--- a/src/app/vehicles/vehicles-list/vehicles-list.component.html
+++ b/src/app/vehicles/vehicles-list/vehicles-list.component.html
@@ -1,3 +1,36 @@
-<p>
-  vehicles-list works!
-</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <!-- Bootstrap JS and dependencies -->
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE+IbbVYUew+OrCXaRkfjJb2f/+4+W3/EWZlAMiXrPr2nM7Qb1KPf"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+      integrity="sha384-oBqDVmMz4fnFO9gyb0W3bC4HExOIm2Q6Um6V4wN1Wo5CHaU4Tm4qX8R4W1H15zG"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-q8i/X+965DzO0rT2j2eZq3j0K9D3v0iW5upkW8IhF5OIlr5skxDsfGpJbrEIC6y"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
